css/style.css
* {
    font-family: "Gloria Hallelujah", Comic Sans MS, Comic Sans, cursive;
    font-weight: normal;
}

html {
    scroll-behavior: smooth;
    cursor: url("../assets/crayon.svg"), auto;
}

html::before {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-size: 12px;
    background-image: url("../assets/point.svg");
    background-repeat: repeat;
    z-index: -10;
  }

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: 100%;
    box-sizing: border-box;
    margin: 0;
    overflow-x: hidden;
}

h1, .h1 {
    font-weight: bold;
    font-size: 60px;
}

.h1 {
    transform: translateY(-10px);
}

a:link, a:visited {
    color: black;
}

h2, .h2 {
    font-size: 40px;
    text-decoration: underline;
    text-align: center;
}

h3 {
    font-size: 30px;
}

h1, h2, h3, p {
    cursor: auto;
    width: auto;
}

img {
    cursor: auto
}

iframe {
    display: none;
}

.project > img {
    height: 125px;
    margin: 55px 0;
}

topbar {
    display: flex;
    height: 40px;
    width: 100%;
    border-radius: 0 0 25px 25px;
    z-index: 100;
    background-color: #000000;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
}

topbar a:link, topbar a:visited {
    color: white;
    z-index: 110;
    margin: 0 40px;
    text-decoration: none;
    font-size: 20px;
}

topbar a img {
    width: 40px;
    height: 40px;
    margin: 0;
}

footer {
    margin-top: 40px;
    margin-bottom: -8px;
    width: 100%;
    background-color: black;
    color: white;
    border-radius: 25px 25px 0 0;
    z-index: 100;
    height: 32px;
    cursor: pointer;
    -webkit-user-select: none;
    user-select: none;
}

credits {
    transition: transform 0.1s;
    color: black;
    position: fixed;
    display: flex;
    width: 80%;
    z-index: 200;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    flex-direction: row;
    background: url("../assets/notebook.svg"), linear-gradient(90deg, rgba(255,255,255,0) 0, rgba(255,255,255,0) 20px, rgba(255,255,255,1) 20px);
    background-repeat: repeat-y;
    cursor: auto;
    box-shadow: 5px 5px 10px 2px rgba(0,0,0,0.75);
    overflow: auto;
    max-height: 80%;
    padding-left: 41px;
    animation: creditsAnimation 0.8s ease;
}

overlay:active > credits, overlay:active > img:first-child {
    transform: translate(-50%, -50%) scale(1.05);
}

overlay {
    height: 100%;
    width: 100%;
    z-index: 150;
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    -webkit-user-select: none;
    user-select: none;
    background-color: #00000084;
    cursor: pointer;
    animation: overlayAnimation 0.8s ease;
}

creditscontent {
    padding-top: 10px;
    height: 100%;
    width: 100%;
    -webkit-user-select: none;
    user-select: text;
    background-color: white;
    background-size: 200px;
    background-image: url("../assets/line.svg");
    background-repeat: repeat;
    border-left: 2px solid #000000;
}

creditscontent p, creditscontent h3 {
    line-height: 75px;
    margin-bottom: 0;
    margin-top: 0;
}

overlay img {
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    margin: 0;
}

overlay img:first-child {
    transition: transform 0.1s;
    max-width: 80%;
    max-height: 80%;
    width: auto;
    height: auto;
    object-fit: contain;
}

overlay img:last-child {
    max-width: 15%;
    max-height: 15%;
    width: auto;
    height: auto;
    animation: spin 0.8s steps(12, end) infinite;
}

#contactForm {
    width: 50%;
}

label {
    display: flex;
    align-items: center;
    flex-direction: column;
    width: 100%;
}

label input {
    width: 100%;
}

label textarea {
    resize: none;
    height: 200px;
    width: 100%;
}

::-webkit-scrollbar {
    width: 15px;
}

::-webkit-scrollbar-thumb {
    background: black;
    background-clip: content-box;
    border: 4px solid transparent;
    border-radius: 20px;
    cursor: default;
}

label textarea::-webkit-scrollbar {
    width: 30px;
}

label textarea::-webkit-scrollbar-thumb {
    border: 13px solid transparent;
}

label input, label textarea {
    padding: 10px;
    font-size: 18px;
}

.flex-left {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: center;
    flex-wrap: wrap;
}

.flex-down {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    justify-content: center;
}

.category div:first-child {
    width: 100%;
}

.category div:last-child {
    width: auto;
}

.project {
    width: 100%;
    padding: 0 8px 40px 8px;
    -webkit-backdrop-filter: blur(8px) invert(100%);
    backdrop-filter: blur(8px) invert(100%);
}

.gallery {
    width: 100%;
}

.gallery a img {
    width: 300px;
}

#title {
    font-size: 30px;
}

#drawable {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -10;
}

#eraser {
    display: none;
    transition: opacity 1s, transform 0.1s ease;
    width: 50px;
    height: 50px;
    background-color: white;
    position: fixed;
    z-index: 200;
    bottom: 15px;
    right: 10px;
    padding: 10px;
    border-radius: 50%;
    box-shadow: 0px 0px 10px -5px #000;
    cursor: pointer;
    animation: eraserAnimation 0.6s ease;
}

@keyframes creditsAnimation {
    0% {
        transform: translate(-50%, 125%);
    }

    80% {
        transform: translate(-50%, -51%);
    }

    100% {
        transform: translate(-50%, -50%);
    }
}

@keyframes overlayAnimation {
    0% {
        background-color: #00000000;
    }

    100% {
        background-color: #00000084;
    }
}

@keyframes eraserAnimation {
    0% {
        transform: translateY(200px) scale(1) rotate(0deg);
    }

    80% {
        transform: translateY(-10px) rotate(15deg);
    }

    87% {
        transform: rotate(-7deg);
    }

    93% {
        transform: translateY(0) scale(1.05) rotate(0deg);
    }

    100% {
        transform: scale(1);
    }
}

@keyframes spin {
    0% {
        transform: translate(-50%, -50%) rotate(0deg);
    }
    100% {
        transform: translate(-50%, -50%) rotate(360deg);
    }
}

#contactText {
    display: none;
}

p {
    font-size: 20px;
}

button {
    background-color: white;
    font-size: 22px;
    transition: background-color 0.3s;
    cursor: pointer;
    color: black;
}

a img {
    cursor: pointer;
}

img {
    margin: 20px;
    z-index: 1;
}

video {
    cursor: auto;
    width: 80%;
}

.social {
    width: auto;
    gap: 10px;
    align-items: center;
}

.social a:has(img) {
    height: 50px;
}

.social img {
    height: 50px;
    cursor: pointer;
    margin: 0;
}

.technologies {
    justify-content: space-around;
}

.technologies img {
    height: 80px;
    width:auto;
    position: relative;
}

.gap {
    gap: 20px;
}

.border {
    border-radius: 254px 14px 226px 16px/14px 224px 16px 254px;
    border-width: 3px;
    border-style: solid;
    border-color: black;
}

button.border:hover {
    background-color: black;
    color: white;
}

#fasa {
    box-sizing: border-box;
    background: radial-gradient(circle, #935ffbc8 0%, #8d67e0c8 100%);
    border: none;
}

#fasa * {
    font-family: "EthnocentricRegular", Arial, sans-serif;
    color: white;
}

#fasa::before {
    content: "";
    position: absolute;
    box-shadow: -305px 250px 200px 100px #ed4feaa6,
                -500px 750px 200px 100px #4fed74a6,
                -705px 1000px 200px 100px #daed4fa6,
                305px 1350px 200px 100px #ed4f4fa6,
                505px 250px 200px 100px #eb1919a6;
    top: 0;
    z-index: -100;
    border-radius: 50%;
    animation: fasaBackground 13s steps(130) infinite alternate;
}

@keyframes fasaBackground {
    0% {
        box-shadow: -305px 250px 200px 100px #ed4feaa6,
                    -500px 750px 200px 100px #4fed74a6,
                    -705px 1000px 200px 100px #daed4fa6,
                    305px 1350px 200px 100px #ed4f4fa6,
                    505px 250px 200px 100px #eb1919a6;
    }

    100% {
        box-shadow: -720px 500px 200px 100px #ed4feaa6,
                    -500px 450px 200px 100px #4fed74a6,
                    -305px 1250px 200px 100px #daed4fa6,
                    305px 1150px 200px 100px #ed4f4fa6,
                    5px 350px 200px 100px #eb1919a6;
    }
}

@media (max-width:725px) {
    h1, h2, h3, p {
        text-align: center;
    }

    .project > img {
        height: 80px;
    }

    h1, .h1 {
        font-size: 35px;
    }

    h2, .h2 {
        font-size: 35px;
    }

    .category div:last-child {
        width: 100%;
    }

    .flex-left {
        width: 100%;
        flex-direction: column;
        align-items: center;
    }

    #contactForm {
        width: 80%;
    }

    ::-webkit-scrollbar {
        width: 0;
    }

    ::-webkit-scrollbar-thumb {
        border: 0 solid transparent;
    }

    .gallery a img {
        width: 80%;
    }
}

